--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 	<!-- Metadata END -->
     
 	<!-- Stylesheets -->
-	<link rel="stylesheet" type="text/css" href="./css/bootstrap.min.css?1563">
+	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 	<link rel="stylesheet" type="text/css" href="style.css?2909">
 	<link rel="stylesheet" type="text/css" href="./css/animate.min.css?7190">
 	<link rel="stylesheet" type="text/css" href="./css/all.min.css">
@@ -36,7 +36,7 @@
 			<div class="col-12">
 				<nav class="navbar navbar-light row navbar-expand-md" role="navigation">
 					<div class="container-fluid ">
-						<a class="navbar-brand" href="index.html">Welcome.</a>
+						<a class="navbar-brand" href="index.html">WWorld Mobile eSim</a>
 						<button id="nav-toggle" type="button" class="ui-navbar-toggler navbar-toggler border-0 p-0 ms-auto me-md-0" aria-expanded="false" aria-label="Toggle navigation" data-bs-toggle="collapse" data-bs-target=".navbar-35092">
 							<span class="navbar-toggler-icon"></span>
 						</button>
@@ -56,10 +56,10 @@
 		<div class="row">
 			<div class="col">
 				<h1 class="text-center mg-clear hero-header-text text-blue-gradient">
-					Welcome.<br>
+					World Mobile USA eSIM - Prepaid Phone Plans<br>
 				</h1>
 				<h3 class="mg-md float-none text-center hero-subheader tc-black">
-					This is a template to get started with <a href="https://pages.cloudflare.com/" rel="nofollow noopener noreferrer" target="_blank">Cloudflare Pages</a>.
+					
 				</h3>
 			</div>
 		</div>
@@ -109,7 +109,7 @@
 
 
 <!-- Additional JS -->
-<script src="./js/bootstrap.bundle.min.js?8537"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 <script src="./js/blocs.min.js?4639"></script>
 <script src="./js/lazysizes.min.js" defer></script><!-- Additional JS END -->
 
