--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="keywords" content="cloudflare, pages, template, edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover">
 	<meta name="robots" content="index, follow">
-	<title>Home | Cloudflare Pages web template</title>
+	<title>World Mobile eSIM</title>
     <link rel="shortcut icon" type="image/png" href="favicon.png">
 	<!-- Metadata END -->
     
@@ -36,7 +36,7 @@
 			<div class="col-12">
 				<nav class="navbar navbar-light row navbar-expand-md" role="navigation">
 					<div class="container-fluid ">
-						<a class="navbar-brand" href="index.html">WWorld Mobile eSim</a>
+						<a class="navbar-brand" href="index.html">A Mobile Plan for Every Need</a>
 						<button id="nav-toggle" type="button" class="ui-navbar-toggler navbar-toggler border-0 p-0 ms-auto me-md-0" aria-expanded="false" aria-label="Toggle navigation" data-bs-toggle="collapse" data-bs-target=".navbar-35092">
 							<span class="navbar-toggler-icon"></span>
 						</button>
@@ -56,10 +56,10 @@
 		<div class="row">
 			<div class="col">
 				<h1 class="text-center mg-clear hero-header-text text-blue-gradient">
-					World Mobile USA eSIM - Prepaid Phone Plans<br>
+					World Mobile USA eSIM
 				</h1>
 				<h3 class="mg-md float-none text-center hero-subheader tc-black">
-					
+					Prepaid Phone Plans
 				</h3>
 			</div>
 		</div>
@@ -82,15 +82,10 @@
 		<div class="row">
 			<div class="col-lg-12 hero-first-col-mb">
 				<h1 class="mg-md text-center">
-					The Cloudflare Network
+					Coming soon.
 				</h1>
 				<div class="text-center">
-					<a href="https://www.cloudflare.com/network/" class="btn btn-lg btn-rd btn-portland-orange" rel="nofollow noopener noreferrer" target="_blank">Explore</a>
-				</div>
-			</div>
-			<div class="offset-md-2 col-md-8 col-lg-8 offset-lg-2">
-				<div class="mx-auto d-block blocsapp-device blocsapp-device-mb mb-space-grey">
-					<img src="img/lazyload-ph.png" data-src="img/cloudflare-network.png" class="img-fluid lazyload" alt="cloudflare network" />
+					<a href="#" class="btn btn-lg btn-rd btn-portland-orange" rel="nofollow noopener noreferrer" target="_blank">Explore</a>
 				</div>
 			</div>
 		</div>
