--- a/index.html
+++ b/index.html
@@ -36,14 +36,17 @@
 			<div class="col-12">
 				<nav class="navbar navbar-light row navbar-expand-md" role="navigation">
 					<div class="container-fluid ">
-						<a class="navbar-brand" href="index.html">A Mobile Plan for Every Need</a>
+						<a class="navbar-brand" href="index.html">World Mobile Data eSIM</a>
 						<button id="nav-toggle" type="button" class="ui-navbar-toggler navbar-toggler border-0 p-0 ms-auto me-md-0" aria-expanded="false" aria-label="Toggle navigation" data-bs-toggle="collapse" data-bs-target=".navbar-35092">
 							<span class="navbar-toggler-icon"></span>
 						</button>
 						<div class="collapse navbar-collapse navbar-120 navbar-29706 navbar-45188 navbar-18426 navbar-42371 navbar-35092">
 							<ul class="site-navigation nav navbar-nav ms-auto">
 								<li class="nav-item">
-									<a href="index.html" class="nav-link a-btn">Home</a>
+									<a href="index.html" class="nav-link a-btn">How it works</a>
+								</li>
+								<li class="nav-item">
+									<a href="index.html" class="nav-link a-btn">FAQ</a>
 								</li>
 							</ul>
 						</div>
@@ -56,7 +59,7 @@
 		<div class="row">
 			<div class="col">
 				<h1 class="text-center mg-clear hero-header-text text-blue-gradient">
-					World Mobile USA eSIM
+					USA eSIM
 				</h1>
 				<h3 class="mg-md float-none text-center hero-subheader tc-black">
 					Prepaid Phone Plans
